--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 <!-- Custom Theme files -->
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script type="text/javascript" src="cordova.js"></script>
+<script type="text/javascript" src="javascript.js"></script>
+
 <script src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/move-top.js"></script>
 <script type="text/javascript" src="js/easing.js"></script>
@@ -40,6 +43,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="header">
 	       <div class="header-top">
 		   <div class="container">
+		   <button onclick="captureImage();">
+		   rawr
+		   </button>
 		       <div class="logo">
 			      <a href=""><img src="images/cupcake.png" alt="" /></a>
 			   </div>
@@ -82,7 +88,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							
 				   		 	<div class="banner_right">
-				   		 		<img src="images/slider-img2.jpg" alt="" />
+				   		 		<img src="images/dino.jpg" alt="" />
 				   		 	</div>
 				   		 	<div class="clear"></div>
 				   	  </div>
@@ -163,7 +169,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				      <h4>Skills</h4>
 				   </div>
 				   <div class="col-md-9 about-section-middle-right-grid">
-				      <p>Modelos de Negócios | Web | </p>
+				      <p>Canvas | Web | </p>
 				   </div>
 				   <div class="clear"></div>
 			   </div>
@@ -174,7 +180,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				      <h4>Hobby</h4>
 				   </div>
 				   <div class="col-md-9 about-section-bottom-right-grid">
-				      <p>Music | Movies | Art | Photography</p>
+				      <p>Music | Movies | Art | Photography | Plants</p>
 				   </div>
 				   <div class="clear"></div>
 			   </div>
@@ -197,7 +203,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								</a> 
 								<div class="lightbox-target" id="goofy">
 								<img src="images/pic1.jpg" class="img-responsive" alt="" />
-								   <a class="lightbox-close" href="#"></a>
+								   <a class="lightbox-close" href=""></a>
 								</div>
 						 </div>
 
